--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
-# Environment Variables
+# Custom Files
 .env
+DeveloperNotes.md
 
 # User-specific files
 *.rsuser
