--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MongoDB": {
+    "ConnectionString": "YOUR_CONNECTIONURI_HERE",
+    "DatabaseName": "sample_mflix",
+    "CollectionName": "playlist"
+  }
 }
